--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,32 +1,19 @@
-<!DOCTYPE HTML>
-<!--name space-->
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="UTF-8">
+    <title>메인</title>
 </head>
 <body>
-<div class="container">
+<h1>메인 페이지</h1>
+<hr>
 
-    <div th:replace="fragments/bodyHeader :: bodyHeader" />
-    <div class="jumbotron">
-        <h1>HELLO GUHAEDOG</h1>
-        <p class="lead">회원 기능</p>
-        <p>
-            <a class="btn btn-lg btn-secondary" href="/members/new">회원 가입</a>
-            <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a>
-            <a class="btn btn-lg btn-secondary" href="/login">로그인</a>
-            <a class="btn btn-lg btn-secondary" href="/logout">로그아웃</a>
-        </p>
+<a sec:authorize="isAnonymous()" th:href="@{/member/login}">로그인</a>
 
-
-        <p class="lead">예약 기능</p>
-        <p>
-            <a class="btn btn-lg btn-secondary" href="/">예약...</a>
-            <a class="btn btn-lg btn-secondary" href="/">예약...</a>
-        </p>
-    </div>
-    <div th:replace="fragments/footer :: footer" />
-
-</div> <!-- /container -->
-
+<a sec:authorize="isAuthenticated()" th:href="@{/member/logout}">로그아웃</a>
+<a sec:authorize="isAnonymous()" th:href="@{/member/new}">회원가입</a>
+<a sec:authorize="hasRole('ROLE_MEMBER')" th:href="@{/member/info}">내정보 보기</a>
+<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/member/Info}">내정보 보기</a>
+<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/member/members}">사용자 정보 조회</a>
+</body>
+</html>
