feat UdpatePage ajax error

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,3 +2,4 @@
 <div class="footer" th:fragment="footer">
     <p>&copy; Hello GUHAEDOG V2</p>
 </div>
+<!--<script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>-->
