--- a/src/main/resources/templates/members/memberUpdate.html
+++ b/src/main/resources/templates/members/memberUpdate.html
@@ -1,40 +1,109 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header"/>
-<body>
+
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
     <h1>게시글 수정</h1>
-
+</div>
+</head>
+<body>
     <div class="col-md-12">
         <div class="col-md-4">
-            <form role="form" action="/api/member/new" th:object="${member}"
-                      method="put">
+<!--            <a th:href = "@{/member/update/{id}(id = ${member.id})}"></a>-->
+<!--            <form role="form" action="@{/api/member/update/${member.id}" th:object="${member}"-->
+<!--                      method="put">-->
+            <form>
                 <div class="form-group">
                     <label th:for="email">회원번호</label>
-                    <input type="text" th:field="${member.id}" class="form-control">
+                    <input type="text" th:field="${member.id}" id="id" class="form-control">
                 </div>
                 <div class="form-group">
                     <div class="form-group">
                         <label th:for="email">이메일</label>
-                        <input type="text" th:field="${member.email}" class="form-control">
+                        <input type="text" th:field="${member.email}" id="email" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label th:for="email">이름</label>
-                        <input type="text" th:field="${member.name}" class="form-control">
+                        <label th:for="name">이름</label>
+                        <input type="text" th:field="${member.name}"  id="name" name = "name" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label th:for="email">휴대폰번호</label>
-                        <input type="text" th:field="${member.phone}" class="form-control">
+                        <label th:for="phone">휴대폰번호</label>
+                        <input type="text" th:field="${member.phone}" id="phone" class="form-control">
                     </div>
                 </div>
+                <a href="/" role="button" class="btn btn-secondary">취소</a>
+                <button type="submit" class="btn btn-primary" onclick="update()" >수정</button>
+                <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
             </form>
-            <a href="/" role="button" class="btn btn-secondary">취소</a>
-            <button type="submit" class="btn btn-primary">수정</button>
-            <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
         </div>
     </div>
-    <div th:replace="fragments/footer :: footer"/>
-</div> <!-- /contx  `ainer -->
+    <div th:replace="fragments/footer :: footer"/></div>
+
+    <script th:inline="javascript" src="https://code.jquery.com/jquery-2.0.3.min.js">
+        console.log("--------------첫부분");
+        function update(){
+            var data = {
+                name: [[ ${member.name} ]],
+                email: [[ ${member.email} ]],
+                phone: [[ ${member.phone} ]]
+            };
+
+
+            console.log(data.email);
+            console.log(data.name);
+
+
+            var id = [[ ${member.id} ]];
+
+
+            console.log("---------");
+            $.ajax({
+                type: 'PUT',
+                url: '/api/member/update/'+id,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                data: JSON.stringify(data)
+            }).done(function() {
+                console.log(name);
+                alert('수정되었습니다.');
+                window.location.href = '/';
+            }).fail(function (request,status,error) {
+                alert(JSON.stringify(error));
+                alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+            });
+
+            console.log(data);
+        }
+        function update(){
+            // ajax
+            var data = {
+                name: [[ ${member.name} ]],
+                email: [[ ${member.email} ]],
+                phone: [[ ${member.phone} ]]
+            };
+            console.log(data);
+            var id = [[ ${member.id} ]];
+
+
+            console.log("---------");
+            $.ajax({
+                type: 'PUT',
+                url: '/api/member/update/'+id,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                data: JSON.stringify(data)
+            }).done(function() {
+                console.log(name);
+                alert('수정되었습니다.');
+                window.location.href = '/';
+            }).fail(function (request,status,error) {
+                alert(JSON.stringify(error));
+                alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+            });
+
+            console.log(data);
+        }
+    </script>
+
 </body>
 </html>
