--- a/src/main/resources/templates/home/member/css/style.css
+++ b/src/main/resources/templates/home/member/css/style.css
@@ -126,7 +126,7 @@ a:focus {
 }
 
 .custom_nav-container .nav_search-btn {
-  background-image: url(../images/search-icon.png);
+  background-image: url(../templates/home/member/images/search-icon.png);
 
   background-size: 22px;
   background-repeat: no-repeat;
@@ -143,12 +143,12 @@ a:focus {
 }
 
 .navbar-brand img {
-  width: 45px;
+  width: 50px;
   margin-right: 5px;
 }
 
 .navbar-brand span {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
   color: #2e2e2d;
   margin-top: 5px;
@@ -164,7 +164,7 @@ a:focus {
 }
 
 .custom_nav-container .navbar-toggler .navbar-toggler-icon {
-  background-image: url(../images/menu.png);
+  background-image: url(../templates/home/member/images/menu.png);
   background-size: 55px;
 }
 
@@ -172,8 +172,8 @@ a:focus {
   display: inline-block;
   padding: 5px 15px;
   background-color: #fc5d35;
-  color: #f7f7f7;
-  font-size: 14px;
+  color: #ffffff;
+  font-size: 16px;
   text-transform: uppercase;
 }
 
@@ -258,12 +258,12 @@ a:focus {
 }
 
 .slider_section .custom_carousel-control .carousel-control-prev {
-  background-image: url(../images/prev.png);
+  background-image: url(../templates/home/member/images/prev.png);
   background-color: #fc5d35;
 }
 
 .slider_section .custom_carousel-control .carousel-control-next {
-  background-image: url(../images/next.png);
+  background-image: url(../templates/home/member/images/next.png);
   background-color: #000000;
 }
 
@@ -321,7 +321,7 @@ a:focus {
 .tasty_section {
   width: 100%;
   height: 500px;
-  background-image: url(../images/tasty-image.png);
+  background-image: url(../templates/home/member/images/tasty-image.png);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -389,11 +389,11 @@ a:focus {
 }
 
 .client_section .custom_carousel-control .carousel-control-prev {
-  background-image: url(../images/prev.png);
+  background-image: url(../templates/home/member/images/prev.png);
 }
 
 .client_section .custom_carousel-control .carousel-control-next {
-  background-image: url(../images/next.png);
+  background-image: url(../templates/home/member/images/next.png);
 }
 
 /* end client section */
@@ -401,7 +401,7 @@ a:focus {
 /* contact section */
 
 .contact_section {
-  background-image: url(../images/orange-dish.png);
+  background-image: url(../templates/home/member/images/orange-dish.png);
   background-repeat: no-repeat;
   background-size: 215px;
   background-position: right center;
