--- a/src/main/resources/templates/memberAuth/signIn.html
+++ b/src/main/resources/templates/memberAuth/signIn.html
@@ -1,34 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<title>구해독</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<!--===============================================================================================-->
-		<link rel="icon" type="image/png" href="../../static/images/icons/favicon.ico"/>
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="../../static/vendor/bootstrap/css/bootstrap.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="../../static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="../../static/fonts/iconic/css/material-design-iconic-font.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="../../static/vendor/animate/animate.css">
-	<!--===============================================================================================-->	
-		<link rel="stylesheet" type="text/css" href="../../static/vendor/css-hamburgers/hamburgers.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="../../static/vendor/animsition/css/animsition.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="../../static/vendor/select2/select2.min.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="../../static/vendor/daterangepicker/daterangepicker.css">
-	<!--===============================================================================================-->
-		<link rel="stylesheet" type="text/css" href="../../static/css/util.css">
-		<link rel="stylesheet" type="text/css" href="../../static/css/main.css">
-	<!--===============================================================================================-->
-	</head>
+	<head th:replace="fragments/config :: configFragment">
 	<body>
+		<header th:replace="fragments/header :: headerFragment"></header>
+
 		<div class="limiter">
 			<div class="container-login100" style="background-image: url('../../static/images/bg-01.jpg');">
 				<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
@@ -95,5 +70,7 @@
 		<script src="../../static/vendor/countdowntime/countdowntime.js"></script>
 	<!--===============================================================================================-->
 		<script src="../../static/js/main.js"></script>
+
+		<footer th:replace="fragments/footer :: footerFragment"></footer>
 	</body>
 </html>
