--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <header th:fragment="headerFragment">
-        <!-- header section strats -->
+        <!-- header section starts -->
         <header class="header_section">
             <div class="container">
                 <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
@@ -17,20 +17,18 @@
                         <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
                             <ul class="navbar-nav  ">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="fruit.html">반려견 질병 진단</a>
+                                    <a class="nav-link" href="#">반려견 질병 진단</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="service.html">동물병원 예약</a>
+                                    <a class="nav-link" href="#">동물병원 예약</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">마이페이지</a>
+                                    <a class="nav-link" href="#">마이페이지</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="quote_btn-container ml-0 ml-lg-4 d-flex justify-content-center">
-                            <a href="">
-                                로그인
-                            </a>
+                            <a href="/member/login">로그인</a>
                         </div>
                     </div>
                 </nav>
