--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <header th:fragment="headerFragment">
         <!-- header section starts -->
         <header class="header_section">
@@ -23,12 +23,15 @@
                                     <a class="nav-link" href="#">동물병원 예약</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">마이페이지</a>
+                                    <a sec:authorize="isAuthenticated()" class="nav-link" href="#">마이페이지</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="quote_btn-container ml-0 ml-lg-4 d-flex justify-content-center">
-                            <a href="/member/login">로그인</a>
+                            <a sec:authorize="isAnonymous()" href="/member/login">로그인</a>
+                        </div>
+                        <div class="quote_btn-container ml-0 ml-lg-4 d-flex justify-content-center">
+                            <a sec:authorize="isAuthenticated()" href="/member/logout">로그아웃</a>
                         </div>
                     </div>
                 </nav>
