--- a/src/main/resources/templates/memberAuth/signIn.html
+++ b/src/main/resources/templates/memberAuth/signIn.html
@@ -15,9 +15,9 @@
 
 						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
-						<div class="wrap-input100 validate-input m-b-23" data-validate = "아이디를 입력해주세요!">
-							<span class="label-input100">아이디</span>
-							<input class="input100" type="text" name="username" placeholder="아이디를 입력해주세요.">
+						<div class="wrap-input100 validate-input m-b-23" data-validate = "이메일을 입력해주세요!">
+							<span class="label-input100">이메일</span>
+							<input class="input100" type="email" name="username" placeholder="이메일을 입력해주세요.">
 							<span class="focus-input100" data-symbol="&#xf206;"></span>
 						</div>
 
@@ -42,7 +42,7 @@
 								아직 회원이 아니세요?
 							</span>
 
-							<a href="#" class="txt2">
+							<a href="/member/signup" class="txt2">
 								회원가입
 							</a>
 						</div>
