refactor : style.css 옵션 변경

--- a/src/main/resources/static/leopet/css/style.css
+++ b/src/main/resources/static/leopet/css/style.css
@@ -4509,8 +4509,8 @@ h6 {
 }
 
 /* line 9, /Applications/MAMP/htdocs/palash/cl/august 2019/198 Animal adoption/198 Animal adoption html/sass/_footer.scss */
-.footer_area .subscribe_part_text h2 {
-  color: #fff;
+.footer_area .subscribe_part_text h3 {
+  color: #ffffff;
   font-size: 30px;
   font-weight: 400;
 }
