--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,8 +22,14 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">동물병원 예약</a>
                                 </li>
+                                <!--
                                 <li class="nav-item">
-                                    <a sec:authorize="isAuthenticated()" class="nav-link" href="#">마이페이지</a>
+                                    <a sec:authorize="isAuthenticated()" class="nav-link" th:href="@{'/member/settings/' + ${member.id}}">정보수정</a>
+                                </li>
+                                -->
+                                <li class="nav-item">
+                                    <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link"  th:href="@{/member/mypage}">마이페이지</a>
+                                    <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link"  th:href="@{/member/mypage}">마이페이지</a>
                                 </li>
                             </ul>
                         </div>
