--- a/src/main/resources/templates/memberAuth/myPage.html
+++ b/src/main/resources/templates/memberAuth/myPage.html
@@ -1,64 +1,51 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="fragments/config :: configFragment"/>
+    <head th:replace="fragments/config :: configFragment" />
     <body>
         <header th:replace="fragments/header :: headerFragment"></header>
 
         <div class="limiter">
             <div class="container-login100" style="background-image: url('../../static/images/bg-01.jpg');">
                 <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                    <!--/*@thymesVar id="memberForm" type=""*/-->
-                    <form class="login100-form validate-form" action="/api/member/signup" th:object="${memberForm}" method="post">
-                        <!--                  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                        <span class="login100-form-title p-b-49">회원가입</span>
+                    <form class="login100-form validate-form">
+                        <span class="login100-form-title p-b-49">마이페이지</span>
 
                         <div class="form-group">
                             <label th:for="name">이름</label>
-                            <input type="text" th:field="*{name}" class="form-control"
-                                   placeholder="이름을 입력해주세요"
-                                   th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'" required>
+                            <input type="text" id="name" placeholder="회원이름" th:field="${member.name}" class="form-control" readonly required>
                         </div>
 
                         <div class="form-group">
                             <label th:for="email">이메일</label>
-                            <input type="email" th:field="*{email}" class="form-control"
-                                   placeholder="이메일을 입력해주세요 ('@' 포함해주세요)" required>
+                            <input type="email" th:field="${member.email}" class="form-control" readonly required>
                         </div>
 
                         <div class="form-group">
                             <label th:for="password">비밀번호</label>
-                            <input type="password" th:field="*{password}" class="form-control"
-                                   placeholder="비밀번호를 입력해주세요" required>
+                            <input type="password" th:field="${member.password}" class="form-control" readonly required>
                         </div>
 
                         <div class="form-group">
                             <label th:for="phone">전화번호</label>
-                            <input type="text" th:field="*{phone}" class="form-control"
-                                   maxlength="11" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
-                                   placeholder="전화번호를 입력해주세요 (숫자만 입력해주세요)" required>
+                            <input type="text" th:field="${member.phone}" class="form-control"
+                                   maxlength="11" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" readonly required>
                         </div>
 
                         <div class="form-group">
                             <label th:for="birth">생일</label>
-                            <input type="date" th:field="*{birth}" class="form-control"
-                                   placeholder="생일을 입력해주세요" required>
+                            <input type="date" th:field="${member.birth}" class="form-control" readonly required>
                         </div>
 
                         <div class="form-group">
                             <label th:for="zipcode">우편번호</label>
-                            <div class="form-inline form-group">
-                                <input type="text" th:field="*{zipcode}" class="form-control" id="sample6_postcode" placeholder="우편번호" required>
-                                &nbsp;&nbsp;&nbsp;
-                                <input type="button" onclick="sample6_execDaumPostcode()"
-                                       class="btn btn-info" value="우편번호 검색"><br>
-                            </div>
+                            <input type="text" th:field="${member.address.zipcode}" class="form-control" id="sample6_postcode" placeholder="우편번호" readonly required>
                         </div>
 
                         <div class="form-group">
                             <label th:for="city">주소</label>
-                            <input type="text" th:field="*{city}" class="form-control" id="sample6_address" placeholder="주소" required><br>
+                            <input type="text" th:field="${member.address.city}" class="form-control" id="sample6_address" placeholder="주소" readonly required><br>
                             <label th:for="street">상세주소</label>
-                            <input type="text" th:field="*{street}" class="form-control" id="sample6_detailAddress" placeholder="상세주소" required>
+                            <input type="text" th:field="${member.address.street}" class="form-control" id="sample6_detailAddress" placeholder="상세주소" readonly required>
                             <!--
                             <input type="text" id="sample6_extraAddress" class="form-control" placeholder="참고항목" required></br>
                             -->
@@ -68,9 +55,7 @@
                         <div class="container-login100-form-btn">
                             <div class="wrap-login100-form-btn">
                                 <div class="login100-form-bgbtn"></div>
-                                <button class="login100-form-btn" type="submit">
-                                    회원가입
-                                </button>
+                                <a th:href = "@{/member/settings/{id}(id = ${member.id})}" class="login100-form-btn" role="button">정보수정</a>
                             </div>
                         </div>
                     </form>
@@ -97,7 +82,6 @@
         <script src="../../static/vendor/countdowntime/countdowntime.js"></script>
         <!--===============================================================================================-->
         <script src="../../static/js/main.js"></script>
-
         <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
         <script src="../static/js/postcode-api.js"></script>
 
