--- a/src/main/resources/templates/memberAuth/signIn.html
+++ b/src/main/resources/templates/memberAuth/signIn.html
@@ -26,6 +26,10 @@
 							<input class="input100" type="password" name="password" placeholder="비밀번호를 입력해주세요.">
 							<span class="focus-input100" data-symbol="&#xf190;"></span>
 						</div>
+						<br/>
+						<div align="center" th:if="${param.error}">
+							<p style="font-size : 15px; color: #FF1C19;"> 이메일 혹은 비밀번호가 틀렸습니다.</p>
+						</div>
 						<br/><br/>
 
 						<div class="container-login100-form-btn">
