style: Reform the frontend

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,36 +7,36 @@
             <div class="row justify-content-center ">
                 <div class="col-lg-8 col-xl-6">
                     <div class="subscribe_part_text text-center">
-                        <h3>Contact</h3>
+                        <h3>Developers</h3>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-between section_padding">
 
                 <div class="col-xl-2 col-sm-6 col-md-3 mb-4 mb-xl-0 single-footer-widget">
-                    <h4>Lee Daeun</h4>
-                    <ul>
-                        <li><a href="#">https://github.com/da-nyee</a></li>
-                    </ul>
+                    <h4>
+                        이다은
+                        <a href="https://github.com/da-nyee"><img src="../static/images/github-fill.png" alt="이다은_깃헙" /></a>
+                    </h4>
                 </div>
                 <div class="col-xl-2 col-sm-6 col-md-3 mb-4 mb-xl-0 single-footer-widget">
-                    <h4>Hyeonwu Jeon </h4>
-                    <ul>
-                        <li><a href="#">https://github.com/HyeonWuJeon</a></li>
-                    </ul>
+                    <h4>
+                        전현우
+                        <a href="https://github.com/HyeonWuJeon"><img src="../static/images/github-fill.png" alt="전현우_깃헙" /></a>
+                    </h4>
                 </div>
                 <div class="col-xl-2 col-sm-6 col-md-3 mb-4 mb-xl-0 single-footer-widget">
-                    <h4>Seunghwan Hwang</h4>
-                    <ul>
-                        <li><a href="#">https://github.com/workhardslave</a></li>
-                    </ul>
+                    <h4>
+                        황승환
+                        <a href="https://github.com/workhardslave"><img src="../static/images/github-fill.png" alt="황승환_깃헙" /></a>
+                    </h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="copyright_text">
                         <p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | 가천대학교 컴퓨터공학과 이다은, 전현우, 황승환</a>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                     </div>
                 </div>
