--- a/src/main/resources/templates/memberAuth/myPage.html
+++ b/src/main/resources/templates/memberAuth/myPage.html
@@ -8,7 +8,7 @@
             <div class="container-login100" style="background-image: url('../../static/images/bg-01.jpg');">
                 <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
                     <form class="login100-form validate-form">
-                        <span class="login100-form-title p-b-49">마이페이지</span>
+                        <span class="login100-form-title p-b-49">정보조회</span>
 
                         <div class="form-group">
                             <label th:for="name">이름</label>
