--- a/src/main/resources/static/leopet/css/style.css
+++ b/src/main/resources/static/leopet/css/style.css
@@ -357,7 +357,7 @@ ul {
   display: inline-block;
   padding: 15px 31px;
   border: 2px solid transparent;
-  background-color: #53C9BB;
+  background-color: #3b1d82;
   font-size: 14px;
   color: #fff;
   -webkit-transition: 0.5s;
@@ -3047,7 +3047,7 @@ sup,
 sub,
 u,
 del {
-  color: #53C9BB;
+  color: #3b1d82;
 }
 
 /* line 93, /Applications/MAMP/htdocs/palash/cl/august 2019/198 Animal adoption/198 Animal adoption html/sass/_elements.scss */
