--- a/src/main/resources/templates/memberAuth/settings.html
+++ b/src/main/resources/templates/memberAuth/settings.html
@@ -70,31 +70,6 @@
             </div>
         </div>
 
-
-        <div id="dropDownSelect1"></div>
-
-        <!--===============================================================================================-->
-        <script src="../../static/vendor/jquery/jquery-3.2.1.min.js"></script>
-        <!--===============================================================================================-->
-        <script src="../../static/vendor/animsition/js/animsition.min.js"></script>
-        <!--===============================================================================================-->
-        <script src="../../static/vendor/bootstrap/js/popper.js"></script>
-        <script src="../../static/vendor/bootstrap/js/bootstrap.min.js"></script>
-        <!--===============================================================================================-->
-        <script src="../../static/vendor/select2/select2.min.js"></script>
-        <!--===============================================================================================-->
-        <script src="../../static/vendor/daterangepicker/moment.min.js"></script>
-        <script src="../../static/vendor/daterangepicker/daterangepicker.js"></script>
-        <!--===============================================================================================-->
-        <script src="../../static/vendor/countdowntime/countdowntime.js"></script>
-        <!--===============================================================================================-->
-        <script src="../../static/js/main.js"></script>
-
-        <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-        <script src="../static/js/postcode-api.js"></script>
-
-        <footer th:replace="fragments/footer :: footerFragment"></footer>
-
         <script th:inline="javascript">
             function update() {
                 var data = {                                // 이름, 이메일, 생일 변경 불가
@@ -126,7 +101,29 @@
             }
         </script>
 
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+        <div id="dropDownSelect1"></div>
+
+        <!--===============================================================================================-->
+        <script src="../../static/vendor/jquery/jquery-3.2.1.min.js"></script>
+        <!--===============================================================================================-->
+        <script src="../../static/vendor/animsition/js/animsition.min.js"></script>
+        <!--===============================================================================================-->
+        <script src="../../static/vendor/bootstrap/js/popper.js"></script>
+        <script src="../../static/vendor/bootstrap/js/bootstrap.min.js"></script>
+        <!--===============================================================================================-->
+        <script src="../../static/vendor/select2/select2.min.js"></script>
+        <!--===============================================================================================-->
+        <script src="../../static/vendor/daterangepicker/moment.min.js"></script>
+        <script src="../../static/vendor/daterangepicker/daterangepicker.js"></script>
+        <!--===============================================================================================-->
+        <script src="../../static/vendor/countdowntime/countdowntime.js"></script>
+        <!--===============================================================================================-->
+        <script src="../../static/js/main.js"></script>
+
+        <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+        <script src="../../static/js/postcode-api.js"></script>
+
+        <footer th:replace="fragments/footer :: footerFragment"></footer>
     </body>
 </html>
