--- a/src/main/resources/templates/memberAuth/signUp.html
+++ b/src/main/resources/templates/memberAuth/signUp.html
@@ -48,7 +48,7 @@
                         <div class="form-group">
                             <label th:for="zipcode">우편번호</label>
                             <div class="form-inline form-group">
-                                <input type="text" th:field="*{zipcode}" class="form-control" id="sample6_postcode" placeholder="우편번호" required>
+                                <input type="text" th:field="*{zipcode}" class="form-control" id="sample6_postcode" placeholder="우편번호" readonly required>
                                 &nbsp;&nbsp;&nbsp;
                                 <input type="button" onclick="sample6_execDaumPostcode()"
                                        class="btn btn-info" value="우편번호 검색"><br>
@@ -57,10 +57,9 @@
 
                         <div class="form-group">
                             <label th:for="city">주소</label>
-                            <input type="text" th:field="*{city}" class="form-control" id="sample6_address" placeholder="주소" required><br>
+                            <input type="text" th:field="*{city}" class="form-control" id="sample6_address" placeholder="주소" readonly required><br>
                             <label th:for="street">상세주소</label>
                             <input type="text" th:field="*{street}" class="form-control" id="sample6_detailAddress" placeholder="상세주소" required>
-
                         </div>
                         <br/>
 
