--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -5,21 +5,21 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>구해독</title>
-        <link rel="icon" href="../static/leopet/img/favicon.png">
+        <link rel="icon" href="../../../static/leopet/img/favicon.png">
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="../static/leopet/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../static/leopet/css/bootstrap.min.css">
         <!-- animate CSS -->
-        <link rel="stylesheet" href="../static/leopet/css/animate.css">
+        <link rel="stylesheet" href="../../static/leopet/css/animate.css">
         <!-- owl carousel CSS -->
-        <link rel="stylesheet" href="../static/leopet/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="../../static/leopet/css/owl.carousel.min.css">
         <!-- themify CSS -->
-        <link rel="stylesheet" href="../static/leopet/css/themify-icons.css">
+        <link rel="stylesheet" href="../../static/leopet/css/themify-icons.css">
         <!-- flaticon CSS -->
-        <link rel="stylesheet" href="../static/leopet/css/flaticon.css">
+        <link rel="stylesheet" href="../../static/leopet/css/flaticon.css">
         <!-- font awesome CSS -->
-        <link rel="stylesheet" href="../static/leopet/css/magnific-popup.css">
+        <link rel="stylesheet" href="../../static/leopet/css/magnific-popup.css">
         <!-- style CSS -->
-        <link rel="stylesheet" href="../static/leopet/css/style.css">
+        <link rel="stylesheet" href="../../static/leopet/css/style.css">
 
         <!--===============================================================================================-->
         <!-- vender의 favicon 참조 삭제 -->
