--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -16,19 +16,19 @@
                 <div class="col-xl-2 col-sm-6 col-md-3 mb-4 mb-xl-0 single-footer-widget">
                     <h4>
                         이다은
-                        <a href="https://github.com/da-nyee"><img src="../static/images/github-fill.png" alt="이다은_깃헙" /></a>
+                        <a href="https://github.com/da-nyee"><img src="../../static/images/github-fill.png" alt="이다은_깃헙" /></a>
                     </h4>
                 </div>
                 <div class="col-xl-2 col-sm-6 col-md-3 mb-4 mb-xl-0 single-footer-widget">
                     <h4>
                         전현우
-                        <a href="https://github.com/HyeonWuJeon"><img src="../static/images/github-fill.png" alt="전현우_깃헙" /></a>
+                        <a href="https://github.com/HyeonWuJeon"><img src="../../static/images/github-fill.png" alt="전현우_깃헙" /></a>
                     </h4>
                 </div>
                 <div class="col-xl-2 col-sm-6 col-md-3 mb-4 mb-xl-0 single-footer-widget">
                     <h4>
                         황승환
-                        <a href="https://github.com/workhardslave"><img src="../static/images/github-fill.png" alt="황승환_깃헙" /></a>
+                        <a href="https://github.com/workhardslave"><img src="../../static/images/github-fill.png" alt="황승환_깃헙" /></a>
                     </h4>
                 </div>
             </div>
