--- a/src/main/resources/templates/admin/memberList.html
+++ b/src/main/resources/templates/admin/memberList.html
@@ -27,7 +27,7 @@
 
                         <tr th:each="member : ${members}">
                             <td th:text="${member.id}"/></td>
-                            <td><a th:href = "@{/admin/settings/{id}(id = ${member.id})}" th:text="${member.name}"></a></td>
+                            <td><a th:href = "@{/admin/member/settings/{id}(id = ${member.id})}" th:text="${member.name}"></a></td>
                             <td th:text="${member.email}"></td>
                             <td th:text="${member.address?.city}"></td>
                             <td th:text="${member.address?.street}"></td>
