feat : Make email validation check

--- a/src/main/resources/templates/memberAuth/settings.html
+++ b/src/main/resources/templates/memberAuth/settings.html
@@ -76,6 +76,7 @@
         </div>
 
         <script th:inline="javascript">
+            console.log("왜안먹음?");
             function update() {
                 var data = {                                // 이름, 이메일, 생일 변경 불가
                     password: $("#memberPassword").val(),     // 비밀번호, 전화번호, 주소, 상세주소, 참고항목 변경 가능
