--- a/src/main/resources/templates/memberAuth/signUp.html
+++ b/src/main/resources/templates/memberAuth/signUp.html
@@ -77,37 +77,6 @@
         </div>
 
 
-
-        <script th:inline="text/javascript">
-            // 아이디 유효성 검사(1 = 중복 / 0 != 중복)
-
-            $("#user_email").blur(function() {
-                // id = "id_reg" / name = "userId"
-                var user_email = $('#user_email').val();
-                console.log(user_email);
-                $.ajax({
-                    url : '/member/emailCheck/'+user_email,
-                    type : 'get',
-                    success : function(data) {
-                        console.log("1 = 중복o / 0 = 중복x : "+ data);
-
-                        if (data == 1) {
-                            // 1 : 아이디가 중복되는 문구
-                            $("#email_check").text("사용중인 아이디입니다 :p");
-                            $("#email_check").css("color", "red");
-                            $("#email_check").focus();
-                        } else {
-                            $("#email_check").text("사용가능한 아이디입니다.");
-                            $("#email_check").css("")
-
-                        }
-                    }, error : function() {
-                        console.log("실패");
-                    }
-                });
-            });
-        </script>
-
         <div id="dropDownSelect1"></div>
 
         <!--===============================================================================================-->
@@ -131,5 +100,39 @@
         <script src="../../../static/js/postcode-api.js"></script>
 
         <footer th:replace="fragments/footer :: footerFragment"></footer>
+
+        <script th:inline="javascript">
+            // 아이디 유효성 검사(1 = 중복 / 0 != 중복)
+            $(document).ready(function(){
+                $("#user_email").blur(function() {
+                    console.log("왜 안돼요?");
+                    $.ajax({
+                        type: "POST",
+                        contentType: "application/json",
+                        url: "/api/checkEmail",
+                        data: JSON.stringify({"user_email" : $('#user_email').val()}),
+                        dataType: 'json',
+                        success: function (data) {
+                            console.log("1 = 중복o / 0 = 중복x : "+ data);
+
+                            if (data == 1) {
+                                // 1 : 아이디가 중복되는 문구
+                                $("#email_check").text("사용중인 아이디입니다 :p");
+                                $("#email_check").css("color", "red");
+                                $("#user_email").focus();
+                            } else {
+                                // 0 : 아이디가 사용가능한 문구
+                                $("#email_check").text("사용가능한 아이디입니다 :p");
+                                $("#email_check").css("color", "blue");
+
+                            }
+                        },
+                        error: function () {
+                            console.log("실패");
+                        }
+                    });
+                });
+            });
+        </script>
     </body>
 </html>
