refactor : admin_settings.html

--- a/src/main/resources/templates/adminAuth/admin_settings.html
+++ b/src/main/resources/templates/adminAuth/admin_settings.html
@@ -15,7 +15,7 @@
 
                         <div class="form-group">
                             <label th:for="name">이름</label>
-                            <input type="text" id="adminName" th:field="${admin.name}" class="form-control" readonly required>
+                            <input type="text" id="adminName" th:field="${admin.name}" class="form-control" readonly>
                         </div>
 
                         <div class="form-group">
