--- a/src/main/resources/templates/members/dogs/dogSettings.html
+++ b/src/main/resources/templates/members/dogs/dogSettings.html
@@ -5,55 +5,45 @@
 <header th:replace="fragments/header :: headerFragment"></header>
 
 <div class="limiter">
-    <div class="container-login100" style="background-image: url('../../static/images/bg-01.jpg');">
+    <div class="container-login100" style="background-image: url('../../../static/images/bg-01.jpg');">
         <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
             <form class="login100-form validate-form">
                 <span class="login100-form-title p-b-49">정보수정</span>
 
-                <input type="text" id="memberId" th:field="${member.id}" hidden="true">
+                <input type="text" id="dogId" th:field="${dog.id}" hidden="true">
 
                 <div class="form-group">
                     <label th:for="name">이름</label>
-                    <input type="text" id="memberName" th:field="${member.name}" class="form-control" readonly required>
+                    <input type="text" id="dogName" th:field="${dog.name}" class="form-control" required>
                 </div>
 
                 <div class="form-group">
-                    <label th:for="email">이메일</label>
-                    <input type="email" id="memberEmail" th:field="${member.email}" class="form-control" readonly required>
+                    <label th:for="email">성별</label>
+                    <input type="email" id="dogGender" th:field="${dog.gender}" class="form-control" readonly required>
                 </div>
 
                 <div class="form-group">
-                    <label th:for="password">비밀번호</label>
-                    <input type="password" id="memberPassword" th:value="${member.password}" class="form-control" required>
-                </div>
+                    <label th:for="birth">나이</label>
+                    <input type="text" th:field="${dog.age}" class="form-control" readonly required>
+                    <select  id="dogAge">
+                        <option th:value="'생후 12개월 미만'">생후 12개월 미만</option>
+                        <option th:value="'1~3세미만'">1~3세미만</option>
+                        <option th:value="'3~7세미만'">3~7세미만</option>
+                        <option th:value="'7~10세미만'">7~10세미만</option>
+                        <option th:value="'10세이상'">10세이상</option>
+                    </select>
 
-
-                <div class="form-group">
-                    <label th:for="phone">전화번호</label>
-                    <input type="text" id="memberPhone" th:field="${member.phone}" class="form-control"
-                           maxlength="11" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" required>
                 </div>
 
                 <div class="form-group">
                     <label th:for="birth">생일</label>
-                    <input type="date" id="memberBirth" th:field="${member.birth}" class="form-control" readonly required>
+                    <input type="date" id="dogBirth" th:field="${dog.birth}" class="form-control" readonly required>
                 </div>
 
-                <div class="form-group">
-                    <label th:for="zipcode">우편번호</label>
-                    <div class="form-inline form-group">
-                        <input type="text" th:field="${member.address.zipcode}" class="form-control" id="sample6_postcode" placeholder="우편번호" readonly required>
-                        <input type="button" onclick="sample6_execDaumPostcode()"
-                               class="btn btn-info" value="우편번호 검색"><br>
-                    </div>
-                </div>
 
                 <div class="form-group">
-                    <label th:for="city">주소</label>
-                    <input type="text" th:field="${member.address.city}" class="form-control" id="sample6_address" placeholder="주소" readonly required><br>
-                    <label th:for="street">상세주소</label>
-                    <input type="text" th:field="${member.address.street}" class="form-control" id="sample6_detailAddress" placeholder="상세주소" required>
-
+                    <label th:for="birth">견종</label>
+                    <input type="date" id="dogvalue" th:field="${dog.value}" class="form-control"  required>
                 </div>
                 <br/>
 
@@ -78,29 +68,27 @@
 <script th:inline="javascript">
     function update() {
         var data = {                                // 이름, 이메일, 생일 변경 불가
-            password: $("#memberPassword").val(),     // 비밀번호, 전화번호, 주소, 상세주소, 참고항목 변경 가능
-            phone: $("#memberPhone").val(),
-            city: $("#sample6_address").val(),
-            zipcode: $("#sample6_postcode").val(),
-            street: $("#sample6_detailAddress").val()
+            age: $("#dogAge").val(),     // 비밀번호, 전화번호, 주소, 상세주소, 참고항목 변경 가능
+            name: $("#dogName").val(),
+            value: $("#dogValue").val(),
         };
 
         console.log(data);
 
-        var id = $("#memberId").val();
+        var id = $("#dogId").val();
 
         $.ajax({
             type: 'PUT',
-            url: '/api/member/settings/' + id,
+            url: '/api/member/dogs/settings/' + id,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             data: JSON.stringify(data)
         }).done(function() {
             alert('정보수정 되었습니다!');
-            window.location.href = "/member/settings/" + id;
+            window.location.href = "/member/dogs/settings/" + id;
         }).fail(function(request, status, error) {
             alert(JSON.stringify(error));
-            window.location.href = "/member/settings/" + id;
+            window.location.href = "/member/dogs/settings/" + id;
             alert("code: " + request.status + "\n" + "message: " + request.responseText + "\n" + "error: " + error);
         });
     }
