--- a/src/main/resources/templates/members/dogs/dogSignUp.html
+++ b/src/main/resources/templates/members/dogs/dogSignUp.html
@@ -35,7 +35,7 @@
                     <input type="radio" th:field="*{gender}"
                            value ="남자"> 남자
                     <input type="radio" th:field="*{gender}"
-                           value ="여자" th:checked="${flag}> 여자
+                           value ="여자"> 여자
                 </div>
 
                 <div class="form-group">
