feat: Keep developing Dog info (admin)

--- a/src/main/resources/templates/admin/settings.html
+++ b/src/main/resources/templates/admin/settings.html
@@ -71,6 +71,13 @@
                                 <a th:href="'javascript:deleteMember()'" class="login100-form-btn">삭제하기</a>
                             </div>
                         </div>
+                        <br/>
+                        <div class="container-login100-form-btn">
+                            <div class="wrap-login100-form-btn">
+                                <div class="login100-form-bgbtn"></div>
+                                <a href="../dog/admin_dogInfo.html" class="login100-form-btn">반려견 조회</a>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
